@@ -1,4 +1,8 @@
 
+2007-08-11  Roland Clobus <rclobus@bigfoot.com>
+	* common/network.c: Added net_would_block and net_write_error to help
+	porting the server to MS Windows (based on a patch by Keishi Suenaga).
+
 2007-08-08  Roland Clobus <rclobus@bigfoot.com>
 	* getVersions.sh: Updated for SF
 	
